syntax = "proto3";

option go_package = "/pb";
package user;

message TokenStat {
  uint64 user_id = 1;
  uint32 role = 2;
}